# python-gemstone-database-explorer

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  playwright.config.js  playwright.live.config.js  pyproject.toml
.github/workflows/: live-ui.yml  publish.yml  verify.yml
docs/: api.md  architecture.md  configuration.md  live-ui-maintainer.md
gemstone_p/: __init__.py  app.py  cli.py  object_view.py  object_view_entries.py  object_view_eval.py  object_view_meta.py  object_view_tabs.py  routes_class_browser.py  routes_class_browser_query.py  routes_class_browser_read.py  routes_class_browser_write.py  routes_class_browser_write_classes.py  routes_class_browser_write_compile.py  routes_class_browser_write_dictionaries.py  routes_class_browser_write_organization.py  routes_class_browser_write_variables.py  routes_code.py  routes_codegen.py  routes_connection.py  routes_debugger.py  routes_debugger_actions.py  routes_debugger_read.py  routes_maglev.py  routes_object.py  routes_object_tabs.py  routes_symbol_list.py  routes_transaction.py  session.py  session_soak.py  wsgi.py
static/js/: about_window_controller.js  about_window_runtime.js  about_window_view.js  app_api_runtime.js  app_bootstrap_runtime.js  app_desktop_runtime.js  app_shell_runtime.js  app_windows_runtime.js  class_browser_app_runtime.js  class_browser_controller.js  class_browser_data_model.js  class_browser_loader.js  class_browser_model.js  class_browser_query_actions.js  class_browser_shell_runtime.js  class_browser_toolbar_runtime.js  class_browser_view.js  class_browser_window_runtime.js  class_browser_workflow.js  class_browser_write_actions.js  codegen_explorer_runtime.js  connection_storage.js  connection_window_checks_runtime.js  connection_window_controller.js  connection_window_model.js  connection_window_profiles_runtime.js  connection_window_runtime.js  connection_window_view.js  debugger_window_controller.js  debugger_window_runtime.js  debugger_window_view.js  desktop_layout_runtime.js  desktop_state_runtime.js  desktop_status_runtime.js  desktop_window_runtime.js  developer_tools_app_runtime.js  dock_context_menu_controller.js  dock_context_menu_view.js  dock_launcher_controller.js  dock_launcher_model.js  (+55 more)
templates/: index.html
tests/: test_api_contracts.py  test_app.py  test_object_view.py  test_session.py
tests/js/: about_window_controller.test.js  about_window_runtime.test.js  about_window_view.test.js  app_api_runtime.test.js  app_bootstrap_runtime.test.js  app_desktop_runtime.test.js  app_shell_runtime.test.js  app_windows_runtime.test.js  class_browser_app_runtime.test.js  class_browser_controller.test.js  class_browser_data_model.test.js  class_browser_model.test.js  class_browser_query_actions.test.js  class_browser_shell_runtime.test.js  class_browser_toolbar_runtime.test.js  class_browser_view.test.js  class_browser_window_runtime.test.js  class_browser_write_actions.test.js  codegen_explorer_runtime.test.js  connection_storage.test.js  (+69 more)
(+19 files in other folders)
